--- a/package.json
+++ b/package.json
@@ -2,26 +2,81 @@
   "name": "rix-nuxtjs-antd",
   "version": "1.0.0",
   "description": "Rix Nuxt.js project with ant design",
-  "author": "Rix App",
   "private": true,
+  "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
-    "build": "nuxt build",
+    "dev": "nuxt-ts",
+    "dev-full": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "build": "nuxt-ts build",
+    "generate": "nuxt-ts generate",
+    "local-start": "nuxt-ts start",
     "start": "cross-env NODE_ENV=production node server/index.js",
-    "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "test": "jest"
   },
+  "keywords": [],
+  "author": {
+    "name": "Rix",
+    "url": "https://github.com/Rix"
+  },
   "dependencies": {
-    "nuxt": "^2.0.0",
+    "@nuxt/types": "^0.5.9",
+    "@nuxt/typescript-build": "^0.5.4",
+    "@nuxt/typescript-runtime": "^0.3.0",
+    "@nuxtjs/axios": "^5.3.6",
+    "ant-design-vue": "^1.1.10",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "ant-design-vue": "^1.1.10"
+    "firebase": "^7.5.2",
+    "graphql-tag": "^2.10.1",
+    "lodash": "^4.17.15",
+    "nuxt": "^2.0.0",
+    "sentry": "^0.1.2",
+    "source-map": "^0.7.3",
+    "vue": "^2.6.11",
+    "vue-class-component": "^7.1.0",
+    "vue-property-decorator": "^8.3.0",
+    "vue-server-renderer": "^2.6.11",
+    "vue-template-compiler": "^2.6.11"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
+    "@babel/runtime-corejs2": "^7.7.7",
+    "@nuxt/typescript-build": "^0.4.0",
+    "@nuxtjs/eslint-config": "^1.0.1",
+    "@nuxtjs/eslint-config-typescript": "^1.0.0",
+    "@nuxtjs/eslint-module": "^1.1.0",
     "@vue/test-utils": "^1.0.0-beta.27",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
+    "core-js": "2",
+    "eslint": "^6.1.0",
+    "eslint-plugin-nuxt": ">=0.4.2",
     "jest": "^24.1.0",
+    "nodemon": "^1.18.9",
     "vue-jest": "^4.0.0-0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "ts",
+      "vue"
+    ],
+    "modulePaths": [
+      "<rootDir>/src",
+      "<rootDir>/node_modules"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest",
+      ".*\\.(ts)$": "ts-jest"
+    },
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "globals": {
+      "vue-jest": {
+        "tsConfigFile": "tsconfig.json"
+      }
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$"
   }
 }
