--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "express": "^4.16.4",
     "firebase": "^7.5.2",
     "graphql-tag": "^2.10.1",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
     "nuxt": "^2.0.0",
     "sentry": "^0.1.2",
