--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxt/typescript-build": "^0.5.4",
     "@nuxt/typescript-runtime": "^0.3.0",
     "@nuxtjs/style-resources": "^1.0.0",
+    "@vue/eslint-config-airbnb": "^5.0.2",
     "ant-design-vue": "^1.1.10",
     "cross-env": "^5.2.0",
     "graphql-tag": "^2.10.1",
